--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
 
-    <div class="container">
-      <div class="row d-flex align-items-center"">
+    <div class="container pt-5">
+      <div class="row d-flex align-items-center pt-5">
       <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
-        <h1>Your new digital experience with Bocor</h1>
+        <h1>Your new digital experience with mAd</h1>
         <h2>We are team of talented designers making websites with Bootstrap</h2>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
       </div>
       <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-        <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+        <img src="assets/img/hero-img1.svg" class="img-fluid" alt="">
       </div>
     </div>
     </div>
@@ -156,7 +156,11 @@
       <div class="container">
 
         <div class="row gy-4">
-          <div class="image col-xl-5"></div>
+          <div class="My_video col-xl-5 pt-5">
+            <video height="300" width="500" controls>
+              <source src="assets/img/My_video.mp4" type="video/mp4">
+            </video>
+          </div>
           <div class="col-xl-7">
             <div class="content d-flex flex-column justify-content-center ps-0 ps-xl-4">
               <h3 data-aos="fade-in" data-aos-delay="100">Voluptatem dignissimos provident quasi</h3>
@@ -719,7 +723,7 @@
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>+91 8080 2277 27<!--br>+1 6678 254445 41--></p>
                 </div>
               </div>
             </div>
