--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <h3>If any Queries you can reach to US on the Following</h3>
+          <h3>If any Queries, you can reach us on the Following...</h3>
         </div>
 
         <div class="row">
@@ -716,7 +716,7 @@
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>tm4.bugdroid.yt@gmail.com<br>contact.youthtechnology@gmail.com</p>
+                  <p>contact.youthtechnology@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -758,7 +758,7 @@
         </div>
 
         <div class="map mt-3">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15086.432135977399!2d73.0178017!3d19.0369861!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x310b156759317e3c!2sIncretech%20pvt.%20ltd.!5e0!3m2!1sen!2sin!4v1655463222344!5m2!1sen!2sin" width="100%" height="290" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15086.432135977399!2d73.0178017!3d19.0369861!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x310b156759317e3c!2sI%20pvt.%20ltd.!5e0!3m2!1sen!2sin!4v1655463222344!5m2!1sen!2sin" width="100%" height="290" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
       </div>
@@ -775,8 +775,10 @@
 
         <div class="row  justify-content-center">
           <div class="col-lg-6">
-            <h3>mAd</h3>
-            <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+            <!--h3>mAd</h3-->
+            <img src="assets/img/madicon.png" class="img-fluid" alt="" height="200" width="200">
+            <h3 class="pt-3" style="font-family: times new roman;">my Attendence daily</h3>
+           <!--p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p-->
           </div>
         </div>
 
@@ -801,14 +803,14 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>mAd</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>YouthTechnology</span></strong>. All Rights Reserved-2020
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bocor-bootstrap-template-nice-animation/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a-->
       </div>
     </div>
   </footer><!-- End Footer -->
