--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
-                  <h4><a href="#">Beatae veritatis</a></h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <h4><a href="#">User Safety</a></h4>
+                  <p>All user data is safe. None of the data is used/ shared among any third party links. </p>
                 </div>
               </div>
             </div><!-- End .content-->
@@ -291,7 +291,7 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right">
-            <img src="assets/img/features-1.svg" class="img-fluid" alt="">
+            <img src="assets/img/fimg-1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left">
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
