--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
       <div class="container">
 
         <div class="row gy-4">
-          <div class="My_video col-xl-5 pt-5">
-            <video height="300" width="500" controls>
+          <div class="My_video col-xl-5 text-center">
+            <video class="video" height="" width="" controls>
               <source src="assets/img/My_video.mp4" type="video/mp4">
             </video>
           </div>
@@ -291,7 +291,10 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right">
-            <img src="assets/img/fimg-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/features-1.svg" class="img-fluid" alt="">
+          <div class="card-img-overlay">
+            <img src="assets/img/fimg-1.jpg" class="img-fluid" alt="" height="" width="">
+          </div>  
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left">
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
