--- a/index.html
+++ b/index.html
@@ -291,27 +291,28 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right">
-            <img src="assets/img/features-1.svg" class="img-fluid" alt="">
-          <div class="card-img-overlay">
-            <img src="assets/img/fimg-1.jpg" class="img-fluid" alt="" height="" width="">
-          </div>  
+            <img src="assets/img/f1.svg" class="img-fluid" alt=""> 
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <!--h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3-->
+            <h3>Membership</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              In Membership feature user will get two options, Trail & Premium.
+              <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua.-->
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <!--li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+              <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li-->
+                <li><i class="bi bi-check"></i>In 'Trail', user will get 30 days Trail activated on the application.</li>
+                <li><i class="bi bi-check"></i>with 'Premium', user will get to experience all features Hands-on.</li>
             </ul>
           </div>
         </div>
 
         <div class="row content">
           <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-            <img src="assets/img/features-2.svg" class="img-fluid" alt="">
+            <img src="assets/img/f2.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
             <h3>Corporis temporibus maiores provident</h3>
@@ -329,7 +330,7 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right">
-            <img src="assets/img/features-3.svg" class="img-fluid" alt="">
+            <img src="assets/img/f3.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
             <h3>Sunt consequatur ad ut est nulla consectetur reiciendis animi voluptas</h3>
