--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bocor Bootstrap Template - Index</title>
+  <title>mAd - my Attendence daily</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/madicon.png" rel="icon">
+  <!--link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"-->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -311,7 +311,7 @@
         </div>
 
         <div class="row content">
-          <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
+          <div class="col-md-5 order-1 order-md-2 text-center" data-aos="fade-left">
             <img src="assets/img/f2.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -329,7 +329,7 @@
         </div>
 
         <div class="row content">
-          <div class="col-md-5" data-aos="fade-right">
+          <div class="col-md-5 text-center" data-aos="fade-right">
             <img src="assets/img/f3.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
@@ -344,7 +344,7 @@
         </div>
 
         <div class="row content">
-          <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
+          <div class="col-md-5 order-1 order-md-2 text-center" data-aos="fade-left">
             <img src="assets/img/features-4.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -740,7 +740,7 @@
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>contact.youthtechnology@gmail.com</p>
+                  <p><a href="https://accounts.google.com/b/1/AddMailService" class="email" target="_blank">contact.youthtechnology@gmail.com</a></p>
                 </div>
               </div>
               <div class="col-md-6">
