--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Bocor - v4.7.1
@@ -76,8 +77,17 @@
             </ul>
           </li-->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="#about">Get App</a></li>
         </ul>
+        <!-- <nav class="navbar-nav"> -->
+          <div class="nav-link">
+            <div class="switch">
+
+              <!-- <input type="checkbox" class="custom-control-input" id="dark-switch">
+              <label class="custom-control-label" for="dark-switch">Dark Switch</label> -->
+            </div>
+          </div>
+        <!--/nav-->
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
@@ -92,7 +102,7 @@
       <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
         <h1>Employee's digital experience with mAd</h1>
         <h2>mAd automates employee experience under one platform with ease.</h2>
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+        <a href="#about" class="btn-get-started scrollto">Get App</a>
       </div>
       <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
 
@@ -849,9 +859,18 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
+  <script>
+    $(document).ready(function(){
+        $('.toggle').click(function(){
+            $('.toggle').toggleClass('active');
+            $('body').toggleClass('night');
+        });
+    });
+  </script>
+
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  
 </body>
 
 </html>
