day/night-theme

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
         <!-- <nav class="navbar-nav"> -->
           <div class="nav-link">
             <div class="switch">
+              <label for="switch">
+              <i class="fa fa-sun-o" aria-hidden="true"></i>
+              <i class="fa fa-moon-o" aria-hidden="true"></i>
+              <div class="ball"></div>
+            </label>
               <!-- <input type="checkbox" class="custom-control-input" id="dark-switch">
               <label class="custom-control-label" for="dark-switch">Dark Switch</label> -->
             </div>
@@ -93,7 +98,7 @@
           $('body').toggleClass('night');
           $('header').toggleClass('night');
           $('#hero').toggleClass('night');
-          $('footer').toggleClass('night');
+          // $('footer').toggleClass('night');
           });
         });
       </script>
