--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
         <!-- language change [[[[[[[[[[[[[[[[[[ ]]]]]]]]]]]]]]]]]] -->
-        <!-- <div class="dropdown langWrap">
+        <div class="dropdown langWrap">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Change Language
           </button>
@@ -131,9 +131,9 @@
             <a class="dropdown-item active" href="#" language='English'>English</a>
             <a class="dropdown-item" href="#" language='Hindi'>Hindi</a>
             <a class="dropdown-item" href="#" language='Marathi'>Marathi</a>
-            
           </div>
-        </div> -->
+        </div>
+
         <!-- <select>
           <option value="EN">ENGLISH</option>
           <option value="actual value 2">HINDI</option>
@@ -1042,7 +1042,7 @@
 
   <div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+      class="bi bi-arrow-up-short"></i></a>
   </div>
   
   <!-- Vendor JS Files -->
@@ -1056,8 +1056,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <!-- <script src="assets/js/translate.js"></script>
-  <script src="assets/js/script.js"></script> -->
+  <script src="assets/js/translate.js"></script>
+  <script src="assets/js/script.js"></script>
 
 </body>
 
